# Abssal-Engine

./: LICENSE  README.md  process.dct
assets/shaders/: shadersCommon.xml  sprites.vs  spritesColor.fs  spritesTextured.vs
assets/textures/common/: err.xcf
assets/textures/gui/cursors/: Hand.xcf
source/: CMakeLists.txt  precompiled.cpp  precompiled.h
source/cmake-modules/: FindGLEW.cmake  FindZlib.cmake
source/framework/: configuration.cpp  configuration.h  dictionary.cpp  dictionary.h  string.cpp  string.h
source/gameLogic/: lgc_level.cpp  lgc_level.h  lgc_object.cpp  lgc_object.h
source/render/: rs_renderSurface.cpp  rs_renderSurface.h  rs_renderSystem.cpp  rs_renderSystem.h  rs_types.h
source/render/geometry/: vertexBuffer.cpp  vertexBuffer.h
source/render/gui/: button.h  frame.cpp  frame.h  gui.cpp  gui.h  image.cpp  image.h  widget.cpp  widget.h
source/render/image/: image_loader.cpp  image_loader.h  png_loader.cpp  png_loader.h  texture.cpp  texture.h  textureManager.cpp  textureManager.h
source/render/shader/: shaderManager.cpp  shaderManager.h  shaderUniforms.cpp  shaderUniforms.h  shaders.cpp  shaders.h
source/render/text/: font.cpp  font.h  fontManager.cpp  fontManager.h  text.cpp  text.h
source/sys/: sys_console.cpp  sys_console.h  sys_defines.h  sys_engine.cpp  sys_engine.h  sys_main.cpp  sys_main.h  sys_timer.cpp  sys_timer.h  sys_types.h  sys_video.cpp  sys_video.h
source/sys/fileSystem/: fs_file.cpp  fs_file.h  fs_stream.cpp  fs_stream.h
source/sys/inputHandler/: in_handler.cpp  in_handler.h
source/sys/memory/: mem_alloc.cpp  mem_alloc.h  mem_blockAlloc.cpp  mem_blockAlloc.h  mem_pointers.cpp  mem_pointers.h
source/sys/threading/: th_atomic.cpp  th_atomic.h  th_criticalSection.cpp  th_criticalSection.h
